# hotshots

./: .env.example  .gitignore  Cargo.toml  LICENSE.md  README.md  fake.http  hotshots@.service  hotshots@xkom.timer
fake_server/: index.php  xkom.json
src/: db.rs  main.rs
src/hot_shots/: mod.rs  xkom.rs
