[package]
name = "hotshots"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ureq = { version = "2.4.0", features = ["json", "brotli"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79" }
rusqlite = { version = "0.26.3", features = ["chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"